fix overflow with min-heigth

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -18,10 +18,10 @@ html {
     // -ms-text-size-adjust: auto
     // -o-text-size-adjust: auto
     // text-size-adjust: auto
-    // @media screen and (min-width: $responsiveWidth) {
-    //   font-size: 1.2 * $baseFontSize / 44 * 100%;
-    // }
-    font-size: calc(12px + 0.5vw);
+    @media screen and (min-width: $responsiveWidth) {
+      font-size: $baseFontSize / 15 * 100%;
+    }
+    // font-size: calc(12px + vw);
     background-color: $baseBackColor;
     color: $baseFontColor;
   }
@@ -127,19 +127,18 @@ html {
   h6 {
     /* Change heading typefaces here */
     font-family: $baseFontHeaders;
-    margin-top: $leading;
-    margin-bottom: 0;
+    padding-top: $leading;
+
+    margin: 0;
     line-height: $leading;
   }
   h1 {
     font-size: 3 * $scale * 1rem;
     line-height: 3 * $leading;
-    margin-top: 2 * $leading;
   }
   h2 {
-    font-size: 2 * $scale * 1rem;
+    font-size: 1.2 * $scale * 1rem;
     line-height: 2 * $leading;
-    margin-top: 2 * $leading;
   }
   h3 {
     font-size: 1 * $scale * 1rem;
