--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -22,7 +22,7 @@ $baseLineHeight: 1.5 !default; // how large the line height is as a multiple of 
 $leading: $baseLineHeight * 1rem !default;
 // Rate of growth for headings
 // I actually like this to be slightly smaller then the leading. Makes for tight headings.
-$scale: 1.414 !default;
+$scale: 1.614 !default;
 
 $responsiveWidth: 800px;
 
